--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 	            </div>
       </header>
 
-	<section id="portfolio">            
+	<section id="portfolio">  
+	          <div class="container">
 	        <div class="titles_lft">
 	        	<div class="title_box">
 	          	<h1>
@@ -51,6 +52,7 @@
          </div>
 	  </div>    		
   </div>
+</div>
 	 </section>
 	    	  
 				
