--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
 	<header>
 		<div class="container">
 			<div class="heading clearfix">
-			<img src="img/logo.png" alt="DVC" class="logo">
+			  <div class="DVC_logo">
+			   <div class="heading_logo">
+			<img src="img/logo1.png" alt="DVC" class="logo">
+		  </div>
+               <div class="heading_title">
+			<p> Сервисный центр и выездной ремонт Apple </p>
+		     </div>
+		  </div>
 		<nav>
 			<ul class="menu">
 				<li>
@@ -426,7 +433,7 @@
                    	
      </div>
     </div>
-    <div class="call_help"
+    <div class="call_help clearfix">
     <div class="service_help"> 
        	<p>Не нашли в списке свою неисправность?</p>
        </div>
