добавлено лого к телефону

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<header>
 		<div class="container">
 			<div class="heading clearfix">
-			  <div class="DVC_logo">
+			   <div class="DVC_logo">
 			   <div class="heading_logo">
 			<img src="img/logo1.png" alt="DVC" class="logo">
 		  </div>
@@ -34,7 +34,13 @@
 					<a href="#">Гарантия</a>
 				</li>
                 <li>
-				    <p> +7(999) 999-99-99</p>
+                	<div class="smart_logo">
+                	<div class="smart_picture">	
+                	<img src="img/smartphone.png" alt="DVC" class="smart_logo_pic">
+                	</div>
+                  <p> +7(999) 999-99-99</p>
+				  
+				</div>
 				</li>
 			</ul>
 		</nav>
