--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>DVC Сервисный центр и выездной ремонт Apple</title>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
    <body>
@@ -445,7 +446,7 @@
        </div>
        
        <div class="service_help_contact"> 
-       	<p> Звоните, мы поможем! <span class="total_serv">+7(999) 999-99-99</span></p>
+       	<p> Звоните, мы поможем! <span class="total_serv">+7 (999) 999-99-99</span></p>
        	</div>
 
       </div>
